Tipos de letra y body

--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-index.html
+<!DOCTYPE html>
+<html>
+
+<head>
+	<style type="text/css">
+		@import url('index.css');
+	</style>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>HTML Y CSS</title>
+</head>
+
+<body>
+	<div class="main">
+		<header>
+			<h1>Website Title</h1>
+			<h2>Subheader, website description H2</h2>
+		</header>
+		<div id="container">
+			<nav>
+				<ul>
+					<li><a href="">Home</a></li>
+					<li><a href="">About</a></li>
+					<li><a href="">Photos</a></li>
+					<li><a href="">Links</a></li>
+					<li><a href="">Forum</a></li>
+					<li><a href="">Free Stuff</a></li>
+					<li><a href="">Downloads</a></li>
+					<li><a href="">Products</a></li>
+					<li><a href="">SiteMap</a></li>
+				</ul>
+			</nav>
+			<div class="box">
+				<div>
+					<h3>License and terms of use</h3>
+					<p>OrangeSquareShadow Rounded is a CSS template that is free ans fully standards compliant.
+						<a href="">Free CSS templates</a> designed this template. This template is allowed for all uses, including commercial
+						use, as it is released under the Creative Commons Attributions 2.5 license. The only stipulation to the use of this
+						free template is that the links appearing in the footer remain intact. Beyond that, simply enjoy and have fun with
+						it!</p>
+					<p>Donec nulla. Aeneaneu augue ac nisl tincdunt rutrum. Proin erat, pharetra eget, poseure at malesuada es, nulla. Donec
+						pretium nibh sed est faucibus suscipit, Nunc nisi, Nullam vehicula. In ipsum lorem, bibendum sed, consectetuer et,
+						gravida id, erat. Ut imperdiet, leo vel condimentum faucibus. risus justo feugiat purus, vitae congue nulla diam non
+						urma.</p>
+					<img src="https://raw.githubusercontent.com/DDI-2020A/html-y-css-basico-GabiCC08/master/images/pic.jpg">
+                    <h3>Title with a link - Example of heading 2</h3>
+                    <p>Donec nulla. Aeneaneu augue ac nisl tincdunt rutrum. Proin erat, pharetra eget, poseure at
+                        malesuada es, nulla. Donec pretium nibh sed est faucibus suscipit, Nunc nisi, Nullam vehicula.
+                        In ipsum lorem, bibendum sed, consectetuer et, gravida id, erat. Ut imperdiet, leo vel condimentum
+                        faucibus. risus justo feugiat purus, vitae congue nulla diam non urma.</p>
+                </div>
+                <div>
+                    <dl>
+                        <dt>Categories:</dt>
+                        <dd>World Politics<br>Europe Sport<br>Networkin<br>Nature - Africa<br>SuperCool<br>Last Category</dd>
+                        <dt>Archives:</dt>
+                        <dd>January 2007<br>February 2007<br>March 2007<br>April 2007<br>May 2007<br>June 2007<br>July 2007
+                            <br>August 2007<br>September 2007<br>October 2007<br>November 2007<br>December 2007</dd>
+                    </dl>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
